--- a/nano_service_cre.c.in
+++ b/nano_service_cre.c.in
@@ -2,25 +2,25 @@
 #include "@service@.h"
 
 ZBUS_CHAN_DEFINE(chan_@service@_cmd,       /* Name */
-		 struct msg_@service@_cmd, /* Message type */
+		 struct @service@_cmd_msg, /* Message type */
 		 NULL,                     /* Validator */
 		 NULL,                     /* User data */
 		 ZBUS_OBSERVERS_EMPTY,     /* Observers list */
-		 MSG_@SERVICE_UPPER@_CMD_INIT_DEFAULT /* Message initialization */);
+@SERVICE_UPPER@_CMD_MSG_INIT_DEFAULT /* Message initialization */);
 
 ZBUS_CHAN_DEFINE(chan_@service@_rsp,       /* Name */
-		 struct msg_@service@_rsp, /* Message type */
+		 struct @service@_rsp_msg, /* Message type */
 		 NULL,                     /* Validator */
 		 NULL,                     /* User data */
 		 ZBUS_OBSERVERS_EMPTY,     /* Observers list */
-		 MSG_@SERVICE_UPPER@_RSP_INIT_DEFAULT /* Message initialization */);
+@SERVICE_UPPER@_RSP_MSG_INIT_DEFAULT /* Message initialization */);
 
 ZBUS_CHAN_DEFINE(chan_@service@_evt,       /* Name */
-		 struct msg_@service@_evt, /* Message type */
+		 struct @service@_evt_msg, /* Message type */
 		 NULL,                     /* Validator */
 		 NULL,                     /* User data */
 		 ZBUS_OBSERVERS_EMPTY,     /* Observers list */
-		 MSG_@SERVICE_UPPER@_EVT_INIT_DEFAULT /* Message initialization */);
+@SERVICE_UPPER@_EVT_MSG_INIT_DEFAULT /* Message initialization */);
 
 #if defined(CONFIG_SHELL)
 
